kustomizations/traefik/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  selector:
    component: traefik
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
    - name: http-bolt
      port: 7687
      targetPort: http-bolt
