kustomizations/traefik/base/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
  - http
  - https
  routes:
  - kind: Rule
    match: PathPrefix(`/api`) || PathPrefix(`/dashboard`)
    services:
    - name: api@internal
      kind: TraefikService
    middlewares:
    - name: traefik-dashboard-auth
